# primis-bio-manager

./: .env.example  .gitignore  HRIS_API_README.md  PRODUCTION_README.md  README.md  SWAGGER_README.md  biometric.db  biometric_web_server.py  check_production_status.sh  database.py  hris_config.py  manage_biometric_server.sh  pyproject.toml  requirements.txt  swagger-ui.html  swagger.yaml  validation_report.md  verify_hris_connection.sh  webhook_manager.py
templates/: index.html
