[project]
name = "primis-bio-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "flask==3.1.2",
    "flask-sock==0.7.0",
    "h11==0.16.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "requests>=2.32.5",
    "simple-websocket==1.1.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
]
